--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "next": "14.0.0",
+    "framer-motion": "^10.18.0"
   },
   "devDependencies": {
     "typescript": "^5",
