--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
   "version": 2,
-  "framework": "nextjs",
-  "env": {
-    "TELEGRAM_BOT_TOKEN": "@telegram_bot_token",
-    "TELEGRAM_CHAT_ID": "@telegram_chat_id"
-  }
+  "framework": "nextjs"
 }
 
