--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.0.0",
-    "framer-motion": "^10.18.0"
+    "framer-motion": "^10.18.0",
+    "node-telegram-bot-api": "^0.66.0",
+    "@vercel/kv": "^1.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.10",
