--- a/package.json
+++ b/package.json
@@ -6,29 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:env": "node test-env-check.js",
+    "test:env:remote": "node test-env-check.js --remote",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.0",
+    "@upstash/redis": "^1.35.6",
+    "@vercel/kv": "^1.0.1",
     "framer-motion": "^10.18.0",
+    "next": "14.0.0",
     "node-telegram-bot-api": "^0.66.0",
-    "@vercel/kv": "^1.0.1"
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/node-telegram-bot-api": "^0.64.7",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.10",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5"
   }
 }
-
-
-
