--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@upstash/redis": "^1.35.6",
     "@vercel/kv": "^1.0.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^10.18.0",
     "next": "14.0.0",
     "node-telegram-bot-api": "^0.66.0",
